--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,9 +8,12 @@
   },
   "dependencies": {
     "@mdi/font": "7.0.96",
+    "axios": "^1.6.8",
     "roboto-fontface": "*",
     "vue": "^3.4.0",
-    "vuetify": "^3.5.0"
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
