--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: ./Backend
       dockerfile: Dockerfile
     volumes:
-      - ./Backend/db.sqlite3:/app/db.sqlite3
+      - ./Backend/:/app/
     ports:
       - "8000:8000"
     environment:
@@ -16,5 +16,7 @@ services:
     build:
       context: ./Frontend
       dockerfile: Dockerfile
+    volumes:
+      - ./frontend/node_modules:/app/node_modules
     ports:
       - "3000:3000"
