--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -6,9 +6,13 @@ services:
       context: ./Backend
       dockerfile: Dockerfile
     volumes:
-      - ./Backend/:/app/
+      - ./Backend/db.sqlite3:/app/db.sqlite3
     ports:
       - "8000:8000"
+    command: >
+      sh -c "python manage.py migrate && 
+             python manage.py loaddata data.json && 
+             python manage.py runserver 0.0.0.0:8000 "
     environment:
       - PYTHONUNBUFFERED=1
 
@@ -16,7 +20,5 @@ services:
     build:
       context: ./Frontend
       dockerfile: Dockerfile
-    volumes:
-      - ./frontend/node_modules:/app/node_modules
     ports:
       - "3000:3000"
