--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:20.12.0-alpine
 
-RUN npm install -g http-server
-
 WORKDIR /app
 
 COPY package*.json ./
@@ -10,8 +8,6 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
-
 EXPOSE 3000
 
-CMD [ "http-server", "dist", "-a", "0.0.0.0", "-p", "3000" ]
+CMD [ "npm","run","dev"]
