--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
+    volumes:
+      - ./django:/app
     command: >
       sh -c "python manage.py migrate && 
              python manage.py loaddata data.json && 
@@ -20,6 +22,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
+    volumes:
+      - ./vuejs/node_modules:/app/node_modules
   redis:
     image: redis:latest
     ports:
